	* arch/arm/src/armv6-m/up_exception.S: Fix Cortex-M0 assembly error
	  when the interrupt stack is enabled.  From Alan Carvalho de Assis
	  (2015-06-30).
	* arch/arm/src/armv6-m/up_assert.c: Port some per-process stack
	  dumping logic from ARMv7-M to ARMv6-M.  From Alan Carvalho de Assis
	  (2015-06-30).
	* tools/testbuild.sh:  Add a script that can be used to perform
	  building testing for several board configurations (2015-06-30).
	* sched/pthread/pthread_create.c:  Group binding needs to be cleared
	  before sched_releasetcb(), as otherwise group_leave() will be called
	  and group->tg_nmembers decremented or group being released.
	  group_leave() should be called only after group_join() is called,
	  not after group_bind().  From Jussi Kivilinna (2015-07-01).
	* arch/arm/src/sama5/sam_ehci.c:  Fix some bad conditional compilation
	  that left a function undefined if CONFIG_USBHOST_ASYNCH is not
	  selected (2015-07-01).
	* arch/arm/src/common/up_vfork.c:  Fix a Cortex-A compilation error
	  when system calls are enabled in modes other than CONFIG_BUILD_KERNEL
	  (2015-07-01)
	* include/nuttx/net/netconfig.h:  Fix some backward compilation that was
	  emitting #error in the wrong condition when SLIP was enabled (2015-07-01).
	* drivers/net/slip.c:  Fix a missed name change when many of network
	  interface names changed sometime back but were apparently never updated
	  for SLIP (2015-07-01).
	* drivers/input/stmpe811_base.c:  In stmpe811_instanciate() when
	  CONFIG_STMPE811_MULTIPLE is enabled, and the call to stmpe811_checkid()
	  fails, then the linked device list is not restored to its previous state.
	  From Sebastien Lorquet (2015-07-02).
	* sched/sched/sched_waitpid.c: Implement WNOHANG for waitpid() only and
	  for the case of CONFIG_SCHED_HAVE_PARENT not selected.  From Max
	  Neklyudov (2015-07-02).
	* arch/sim/src/up_head.S: Implement board_power_off() for the simulation
	  platform (2015-07-04).